support paths with spaces and paths on windows